--- a/task2_app/Base.lproj/Main.storyboard
+++ b/task2_app/Base.lproj/Main.storyboard
@@ -1,24 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="task2_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="1w7-SA-gca">
+                                <rect key="frame" x="39.333333333333343" y="206" width="314.33333333333326" height="216"/>
+                                <locale key="locale" localeIdentifier="tr"/>
+                            </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f4E-Bj-2HL">
+                                <rect key="frame" x="162.66666666666666" y="145" width="67.666666666666657" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uco-cS-Tzz">
+                                <rect key="frame" x="98.333333333333329" y="602" width="196.33333333333337" height="50.333333333333371"/>
+                                <color key="backgroundColor" red="0.2274509804" green="0.2274509804" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Set Alarm" buttonSize="large"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="setAlarmButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Cwx-RO-wGp"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="1w7-SA-gca" firstAttribute="top" secondItem="f4E-Bj-2HL" secondAttribute="bottom" constant="40" id="2jX-Oi-N92"/>
+                            <constraint firstItem="uco-cS-Tzz" firstAttribute="top" secondItem="1w7-SA-gca" secondAttribute="bottom" constant="180" id="CUP-RD-WgL"/>
+                            <constraint firstItem="f4E-Bj-2HL" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="PTQ-u6-lGg"/>
+                            <constraint firstItem="uco-cS-Tzz" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="ahD-pz-8Gh"/>
+                            <constraint firstItem="1w7-SA-gca" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="bRK-bR-wiH"/>
+                            <constraint firstItem="f4E-Bj-2HL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="86" id="fCl-L9-0RN"/>
+                            <constraint firstItem="uco-cS-Tzz" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="jvr-W3-WU7"/>
+                            <constraint firstItem="1w7-SA-gca" firstAttribute="centerX" secondItem="f4E-Bj-2HL" secondAttribute="centerX" id="wPn-UC-7E6"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="setAlarmButton" destination="uco-cS-Tzz" id="eTH-k4-cUB"/>
+                        <outlet property="timePicker" destination="1w7-SA-gca" id="Yvl-lE-Onp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="107.63358778625954" y="3.5211267605633805"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
